CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-28 04:27:51
+lastsearch = 2024-07-28 09:31:46
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -22,9 +22,9 @@ title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
 url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
 
 [tiki.vn]
-match = -3.7%%
-title = Chăn tuyết nhung hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn tuyết nhung
+match = -18.5%%
+title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
 
 [demxanh.com]
 match = -18.5%%
@@ -102,9 +102,9 @@ title = Những điều cấm kỵ ở Thái Lan TUYỆT ĐỐI mà bạn cần 
 url = https://www.kosshop.vn/t/nhung-dieu-cam-ky-o-thai-lan.html
 
 [m.facebook.com]
-match = 7.4%%
-title = WHERE DO YOU ORDER YOUR COOKING GAS
-url = https://m.facebook.com/groups/penangtraveltips/posts/674866215937708/
+match = -88.9%%
+title = Sau tất cả những gì chúng ta đã trải qua, bây giờ có lẽ đã rõ ...
+url = https://m.facebook.com/phuc.lai.07/videos/sau-tất-cả-những-gì-chúng-ta-đã-trải-qua-bây-giờ-có-lẽ-đã-rõ-hơn-nhiều-câu-hỏi-t/4044466555840005/
 
 [vietbao.com]
 match = -59.3%%
@@ -112,9 +112,9 @@ title = Chủ tịch Hội đồng Châu Âu ca ngợi rằng tuần lễ vừa 
 url = https://vietbao.com/a319309/t
 
 [baomoi.com]
-match = -51.9%%
-title = Nữ nhạc sĩ vượt qua nỗi tự ti về một cơ thể khác với ...
-url = https://baomoi.com/nu-nhac-si-vuot-qua-noi-tu-ti-ve-mot-co-the-khac-voi-moi-nguoi-c49689571.epi
+match = -74.1%%
+title = Trịnh Thu Vinh thi đấu chung kết Olympic 2024 lúc mấy giờ ...
+url = https://baomoi.com/trinh-thu-vinh-thi-dau-chung-ket-olympic-2024-luc-may-gio-luat-the-nao-c49748279.epi
 
 [bacgiang.gov.vn]
 match = 9.5%%
@@ -152,9 +152,9 @@ title = Khách Tây thẳng thắn nói lý do tại sao mê Việt Nam ...
 url = https://dantri.com.vn/du-lich/khach-tay-thang-than-noi-ly-do-tai-sao-me-viet-nam-hon-thai-lan-20240625105824635.htm
 
 [www.facebook.com]
-match = -37.0%%
-title = Chăn 3kg 4 kg 5kg Thành... - Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/story.php/?story_fbid=436093618729320&id=100069860554625
+match = -59.3%%
+title = Định nghĩa nỗi đau như thế nào? -... - Chuyện của Hà Nội
+url = https://www.facebook.com/story.php/?story_fbid=1112352143578319&id=100044106323019
 
 [stockbiz.vn]
 match = 18.5%%
@@ -265,4 +265,9 @@ url = https://cabrinivillas.com/show.aspx?url=//xn--98-6kc3bfr2e.xn--p1ai/972563
 match = -75.0%%
 title = Dac San KSCN
 url = https://kysucongnghe.net/resource/dacsan/ds5_2013/ds5p1_30.PDF
+
+[vi.wikipedia.org]
+match = -14.8%%
+title = Thaksin Shinawatra – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Thaksin_Shinawatra
 
