--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-28 04:18:45
+lastsearch = 2024-07-28 09:22:28
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -18,8 +18,8 @@ url = https://www.instagram.com/lol_nemesis/
 
 [www.reddit.com]
 match = -115.0%%
-title = Kog'Maw means sweet potato in Korean (고구마). Any ...
-url = https://www.reddit.com/r/leagueoflegends/comments/5qvb2u/kogmaw_means_sweet_potato_in_korean_고구마_any_other/
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
 match = -33.3%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -110.0%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -115.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.vlr.gg]
 match = -145.0%%
@@ -385,4 +385,14 @@ url = https://additioapp.com/en/the-5-keys-of-south-koreas-education-system/
 match = -105.0%%
 title = Russian Offensive Campaign Assessment, April 26, 2024
 url = https://www.iswresearch.org/2024/04/russian-offensive-campaign-assessment_26.html
+
+[www.cambridge.org]
+match = -150.0%%
+title = Globalization and extra-parliamentary politics in an era of ...
+url = https://www.cambridge.org/core/journals/european-political-science-review/article/globalization-and-extraparliamentary-politics-in-an-era-of-democracy/57A605213345E998C5C2AB3A23404E69
+
+[www.cia.gov]
+match = -60.0%%
+title = FIDEL'S SISTER WARNED DOMINICANS OF REVOLT
+url = https://www.cia.gov/readingroom/document/cia-rdp67b00446r000500120025-7
 
