--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-28 06:47:15
+lastsearch = 2024-07-28 09:18:37
 
 [xoptraisan.info]
-match = -147.4%%
-title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = 26.3%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamaulac.com.vn]
 match = -31.6%%
@@ -27,9 +27,9 @@ title = Thảm xốp – THAMHT.VN
 url = https://thamht.vn/collections/tham-xop
 
 [shopee.vn]
-match = -121.1%%
-title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm xốp/trải sàn
+match = -94.7%%
+title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [thamtretho.com]
 match = 37.5%%
