--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-28 08:06:15
+lastsearch = 2024-07-28 09:25:53
 
 [everon.online]
 match = 50.0%%
@@ -18,13 +18,13 @@ url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [tiki.vn]
 match = 29.4%%
-title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
-url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
+title = Mua Bộ ga chun chần bốn mùa Everon ESB22051 ( 01 ...
+url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-esb22051-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829191.html
 
 [everonhanquoc.com.vn]
-match = -26.5%%
-title = Bộ chăn ga Everon ESB - 23021 hứa hẹn sẽ là best seller ...
-url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esb-23021-pd.html
+match = -20.6%%
+title = Bộ chăn ga Everon ESB-22020 mang phong cách trẻ trung ...
+url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esb-22020-pd.html
 
 [everonhn.com.vn]
 match = 25.0%%
@@ -78,8 +78,8 @@ url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-24035 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est24035.html
+title = Everon EPM-24060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24060.html
 
 [demxanh.com]
 match = -2.9%%
