--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-28 03:29:14
+lastsearch = 2024-07-28 09:32:26
 
 [zhangbrickshop.com]
 match = -133.3
@@ -94,7 +94,7 @@ url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-t
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 10
-url = https://www.diepxuan.com/chieu-lac-d2-10.html
+url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOoqdn_kCYuHTXhsKVpFg4X5UpPQicC8hT_zrkO8tdt7eGji-1TMP
 
 [visana.vn]
 match = -240.0%%
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -26.7%%
+title = Du học Hàn Quốc - ANIDO
+url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
 
 [hoc247.vn]
 match = -213.3%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -226.7%%
-title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
-url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [uspharma.vn]
 match = -20.0%%
@@ -289,7 +289,7 @@ url = https://rentapartment.vn/vietnam-zip-postal-code/
 [alphardaudio.us]
 match = -100.0%%
 title = Machete ML-10S D2 10" 600W MAX Subwoofer
-url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer
+url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer?srsltid=AfmBOor704sxs0mzZFdAlCS8XvBLTnkh2LFK6-SaFkhQHpN0-iYYhoo3
 
 [www.handspan.com]
 match = -126.7%%
