--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-28 02:27:11
+lastsearch = 2024-07-28 09:29:01
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -87.5%%
-title = DANG DỞ - NAL | OFFICIAL MUSIC VIDEO
-url = https://www.youtube.com/watch?v=-ddYMCa_58o
+match = -175.0%%
+title = Lắc Xúc Xắc Quá Nhiều, Tôi Nâng Cấp Con Vịt Này QUÁ ...
+url = https://www.youtube.com/watch?v=_iGnRB4o7ng
 
 [saigontourist.edu.vn]
 match = -162.5%%
