--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-28 05:45:39
+lastsearch = 2024-07-28 09:24:11
 
 [www.georgianicols.com]
 match = -192.3%%
@@ -32,9 +32,9 @@ title = Anthony Edwards (basketball)
 url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
 match = -269.2%%
