--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-28 04:13:55
+lastsearch = 2024-07-28 09:23:28
 
 [en.wikipedia.org]
-match = -4.8%%
-title = Modified Newtonian dynamics
-url = https://en.wikipedia.org/wiki/Modified_Newtonian_dynamics
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Non,_je_ne_regrette_rien
 
 [www.marysrosaries.com]
 match = -33.3%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -157.1%%
-title = The Linguist and Educational Review - Page 15 - Google Books Result
-url = https://books.google.com/books?id=V3IoVBZlBtsC&pg=RA13-PA15&lpg=RA13-PA15&dq=nem+di+a+mon+9f+16+re&source=bl&ots=MUAjmLTM9l&sig=ACfU3U1mFUpwkjThVJE6iVIxpHUskYvAQw&hl=en&sa=X&ved=2ahUKEwiRt8bYkciHAxXoElkFHcdWBXUQ6AF6BAhCEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCp6zrno&sig=ACfU3U0Fna3KBBTAWFkL5n5N556kqSOS0w&hl=en&sa=X&ved=2ahUKEwjq3tDw1siHAxWUD1kFHaZZEFEQ6AF6BAgcEAM
 
 [www.diepxuan.com]
 match = -81.0%%
