--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-28 05:46:21
+lastsearch = 2024-07-28 09:32:07
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = 0.0%%
+title = 
+url = https://www.tui.co.uk/destinations/faq/before-you-go/travel-and-health-requirements
 
 [maritime-executive.com]
 match = -316.7%%
