--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-28 04:22:15
+lastsearch = 2024-07-28 09:28:40
 
 [tuananh.vn]
 match = 22.2%%
@@ -54,7 +54,7 @@ url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 [www.youtube.com]
 match = -16.7%%
 title = Đệm Tuấn Anh
-url = https://www.youtube.com/channel/UC1lyuex0oy3RBLBffNrjtMw/videos
+url = https://www.youtube.com/@emtuananh5547/videos
 
 [demgiare.net]
 match = 32.0%%
