CI images update

--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-28 04:37:49
+lastsearch = 2024-07-28 09:54:52
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -12,9 +12,9 @@ title = Bộ ga chun LIVING - LV55
 url = https://hanvico.com.vn/san-pham/lv55/
 
 [www.diepxuan.com]
-match = -14.3%%
-title = Bộ chăn ga gối màu xoa tin 14 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOoq_yTCX5-FpzNwBUVBg4txKcxxW9o0LBVGLb86qhUJfpYtd8T-r
+match = -4.8%%
+title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
+url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
 match = -57.1%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://changagoidemsonghong.com/chan-ga-goi-bc57
+match = -28.6%%
+title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
+url = https://changagoidemsonghong.com/chan-ga-goi-bc63
 
 [songhong.info]
 match = -19.0%%
@@ -44,7 +44,7 @@ url = https://songhong.info/chan-ga-goi-bc14
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOoronwJ_KSsVNDEHEmgVSK1YX9SYro2HqeJvm8ecCM37axWimd0U
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -54,7 +54,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140?srsltid=AfmBOopsc14_Cv2rozjt5JZOG6hDllz9g2QR-cs4-9khpa299zRO1V0o
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
 
 [changmibedding.com]
 match = -33.3%%
@@ -79,7 +79,7 @@ url = https://shopee.vn/Bộ-ga-gối-cotton-đũi-phủ-bèo-bọc-chun-trần-
 [shop.chanrathanhthuy.com]
 match = 57.1%%
 title = Bộ Ga Bọc Lụa Tơ Tằm 14
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14?srsltid=AfmBOoqObKzM5gpFZv4nKb-HKdzOXMhjkZ8uTtF2pzc4qXXd5Aj6owIR
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14
 
 [chandrapsaigon.com]
 match = -71.4%%
