--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-28 06:35:38
+lastsearch = 2024-07-28 09:55:12
 
 [shopee.vn]
-match = -33.3%%
-title = Chiếu Điều Hòa Loại Dầy Sợi Mây Tổng Hợp Cao Cấp ...
-url = https://shopee.vn/Chiếu-Điều-Hòa-Loại-Dầy-Sợi-Mây-Tổng-Hợp-Cao-Cấp-Chiếu-Điều-Hòa-Thông-Minh-Thoáng-Khí-Mát-Rượi-i.283091656.2942408197
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [www.diepxuan.com]
 match = 100.0%%
