--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-28 06:46:36
+lastsearch = 2024-07-28 09:50:03
 
 [tiki.vn]
 match = -47.6%%
@@ -182,9 +182,9 @@ title = Lịch chiếu
 url = https://chieuphimquocgia.com.vn/movies
 
 [www.skyscanner.com.vn]
-match = -95.2%%
-title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
-url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
+match = -81.0%%
+title = Vé máy bay giá rẻ từ Đài Loan đến Pháp - Skyscanner
+url = https://www.skyscanner.com.vn/routes/tw/fr/đai-loan-to-phap.html
 
 [113.165.166.110:81]
 match = -81.0%%
