--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-28 08:15:16
+lastsearch = 2024-07-28 09:52:49
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -32,9 +32,9 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -36.0%%
-title = Ga giường thăng lợi 160*200 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ga giường thăng lợi 160*200
+match = -44.0%%
+title = Ga trải giường thắng lợi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=ga trải giường thắng lợi
 
 [nemhana.com]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOoqrd56_DHy7Kb7b1GOUHsRBtrJb3WCEyuTyeLCD0F80_8bcOATI
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
 
 [nemcaosuthangloi.vn]
 match = 12.0%%
