--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-27 14:44:28
+lastsearch = 2024-07-28 09:52:11
 
 [www.instagram.com]
 match = -50.0%%
@@ -17,14 +17,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -83.3%%
-title = Hội người việt ở Kimhe (김해) | 𝐍𝐄𝐌 𝐂𝐇𝐔𝐀
-url = https://www.facebook.com/groups/2515164205371847/posts/𝐍𝐄𝐌-𝐂𝐇𝐔𝐀-𝐕𝐈𝐄̂𝐍-𝐌𝐈𝐍𝐈-𝐎̛́𝐓-𝐗𝐈𝐄̂𝐌-𝐗𝐀𝐍𝐇-14k-500gr-nem-ngon-kèm-ớt-xiêm-xanh-cực-kì-t/3776357239252531/
+match = -105.6%%
+title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
+url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -127.8%%
+title = Nệm Vạn Thành 5cm, 10cm, 15cm, 20cm giá bao nhiêu?
+url = https://thegioinem.com/nem-van-thanh-5cm--10cm-15cm--20cm.html
 
 [www.youtube.com]
 match = -111.1%%
