--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-28 06:35:19
+lastsearch = 2024-07-28 09:48:59
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = 10.0%%
+title = Anti-Korean sentiment
+url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -414,7 +414,7 @@ url = https://8tharmy.korea.army.mil/site/index.asp
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=d8b6740b587384a7&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiEjquc_8CHAxVRv4kEHRgRAREQsZYEegQIUBAC
+url = https://www.google.com/search?sca_esv=7e57735cd28b5eff&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjr7t7K3MiHAxVpLFkFHa0PDscQsZYEegQIUxAC
 
 [www.outlookindia.com]
 match = -170.0%%
