--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-28 09:30:46
+lastsearch = 2024-07-28 09:52:30
 
 [www.tui.co.uk]
-match = -86.7%%
-title = Top things to do in Singapore | Discover
-url = https://www.tui.co.uk/discover/top-things-to-do-singapore
+match = -133.3%%
+title = Last Minute Cruise Deals | Marella Cruises
+url = https://www.tui.co.uk/cruise/deals/last-minute-cruises
 
 [www.travelgossip.co.uk]
 match = 0.0%%
