--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-28 08:02:09
+lastsearch = 2024-07-28 10:14:11
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = -14.3%%
-title = Chiếu đèn vàng da: Làm thế nào cho đúng, hiệu quả?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-lam-nao-cho-dung-hieu-qua-vi/
+match = -35.7%%
+title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
+url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
 
 [www.hotdeal.vn]
 match = -25.0%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = 17.9%%
-title = Việc làm spa uy tín - Facebook
-url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
+match = 25.0%%
+title = Việc Làm Tp Cao Lãnh , Đồng Tháp
+url = https://m.facebook.com/groups/882668715206602/permalink/2018876858252443/?locale=nb_NO
 
 [www.dkn.tv]
 match = -21.4%%
