CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-28 03:46:58
+lastsearch = 2024-07-28 10:32:33
 
 [shopee.vn]
 match = -28.0%%
@@ -147,9 +147,9 @@ title = Secured Home of canbangdongclc.com
 url = https://canbangdongclc.com/
 
 [tuoitre.vn]
-match = -68.0%%
-title = Động đất ở Đài Loan: 9 người chết, nhân chứng kể lại ...
-url = https://tuoitre.vn/dong-dat-o-dai-loan-9-nguoi-chet-nhan-chung-ke-lai-canh-rung-chuyen-20240403105214078.htm
+match = -60.0%%
+title = Động đất mạnh 7,2 độ ở Đài Loan, 9 người chết và 821 ...
+url = https://tuoitre.vn/dai-loan-nhat-ban-philippines-phat-canh-bao-sau-dong-dat-20240403082258882.htm
 
 [baothuathienhue.vn]
 match = -72.0%%
@@ -212,9 +212,9 @@ title = Kết quả sản xuất vụ đông xuân năm 2024
 url = https://www.gso.gov.vn/du-lieu-va-so-lieu-thong-ke/2024/07/ket-qua-san-xuat-vu-dong-xuan-nam-2024/
 
 [znews.vn]
-match = -32.0%%
-title = 'Người đẹp' với chiêu lừa cầm cố 15 chiếc ôtô
-url = https://znews.vn/nguoi-dep-voi-chieu-lua-cam-co-chiec-oto-post711644.html
+match = -68.0%%
+title = Một lần đặt chân đến địa điểm quay loạt phim Đài Loan nổi ...
+url = https://znews.vn/mot-lan-dat-chan-den-dia-diem-quay-loat-phim-dai-loan-noi-tieng-post1446961.html
 
 [vnexpress.net]
 match = -37.5%%
