--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-07-28 06:43:51
+lastsearch = 2024-07-28 10:41:26
 
 [www.everonqb.com]
 match = 0.0%%
@@ -75,4 +75,9 @@ url = https://audiokarma.org/forums/index.php?threads/what-power-supply-caps-to-
 match = -91.3%%
 title = 2011 Viña Ochagavia Cabernet Sauvignon Raíces Nobles
 url = https://www.cellartracker.com/wine.asp?iWine=2084936
+
+[sieuthidienmaypico.com]
+match = -87.0%%
+title = Giá vỏ gối ôm 80x100 ở đâu rẻ nhất tháng 07/2024 - Trang 4
+url = https://sieuthidienmaypico.com/tag/vo-goi-om-80x100-ti/?trang=4
 
