--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-28 06:36:58
+lastsearch = 2024-07-28 10:44:15
 
 [chieutruc.info]
 match = -60.0%%
@@ -32,9 +32,9 @@ title = Chiếu Trúc Cao Bằng Hàng Xuất Khẩu Dùng Liệu Có tốt?
 url = https://www.youtube.com/watch?v=sGb4V5EQcww
 
 [chieutrucsaigon.com]
-match = 44.0%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
+match = -4.0%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [hanggiadunghatinh.com]
 match = 40.0%%
@@ -182,9 +182,9 @@ title = ĐỊA CHỈ MUA CHIẾU TRÚC CAO SƠN TẠI HCM
 url = http://www.chieutretruc.com/2017/12/dia-chi-mua-chieu-truc-cao-son-tai-hcm.html
 
 [www.lazada.vn]
-match = -20.0%%
-title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè
-url = https://www.lazada.vn/products/chieu-truc-long-chieu-tre-cao-bang-nan-to-loai-dep-mat-lanh-mua-he-du-tat-ca-cac-kich-thuoc-i2239379152.html
+match = -84.0%%
+title = Chiếu trúc tăm vân gỗ in hoa đế lụa, chiếu trúc tây bắc, cao ...
+url = https://www.lazada.vn/products/chieu-truc-tam-van-go-in-hoa-de-lua-chieu-truc-tay-bac-cao-bang-dieu-hoa-mat-lanh-nhieu-size1m21m51m61m8-i2241942505.html
 
 [www.sendo.vn]
 match = -52.0%%
