--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-28 01:16:31
+lastsearch = 2024-07-28 10:30:48
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -218.8%%
-title = Chiêu trò cùm nhíp chống sốc và thanh giằng cân bằng chống ...
-url = https://www.youtube.com/watch?v=wZdbzOkTME0
+match = -175.0%%
+title = Lắc Xúc Xắc Quá Nhiều, Tôi Nâng Cấp Con Vịt Này QUÁ ...
+url = https://www.youtube.com/watch?v=_iGnRB4o7ng
 
 [hawater.com.vn]
 match = -75.0%%
