--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-28 10:03:06
+lastsearch = 2024-07-28 10:44:36
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoqG07PSp2I2Wye6ekTNfDeykI_BrJaCPamJhf8LU48fQgqPU4_k
 
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOorkJ8FNtsOasl_i6IePoO2Si35In2MYtXt7ntWwHq2dRF4Kcwws
 
 [tiki.vn]
 match = -42.9%%
