--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-28 09:48:38
+lastsearch = 2024-07-28 10:44:57
 
 [shopee.vn]
 match = -216.7%%
@@ -59,7 +59,7 @@ url = https://nemkimcuong.vn/mienbac/vi/san-pham/bo-ghe-sofa-tan-co-dien-cd01-xu
 [www.lazada.vn]
 match = -300.0%%
 title = Nệm ghế , thảm ghế hoàng gia đỏ các kích thước từ 1m7 x ...
-url = https://www.lazada.vn/products/nem-ghe-tham-ghe-hoang-gia-do-cac-kich-thuoc-tu-1m7-x-55cm-i488602652.html?srsltid=AfmBOoovL0Rmzwx80yNubPwJFS2gO5CwIxJ73RTJbrbGLwife9N-Buoz
+url = https://www.lazada.vn/products/nem-ghe-tham-ghe-hoang-gia-do-cac-kich-thuoc-tu-1m7-x-55cm-i488602652.html
 
 [vn.my-best.com]
 match = -233.3%%
@@ -119,7 +119,7 @@ url = https://vesinhnhaoninhthuan.com/giat-nem-ghe-sofa-tham
 [www.liena.com.vn]
 match = -291.7%%
 title = Ghế Sofa Cao Cấp - Sofa Nệm Cao Su Phòng Khách Sang ...
-url = https://www.liena.com.vn/noi-that/sofa-nem-cao-cap?srsltid=AfmBOorjE0P603DoPL9s_7zAk8BMh8euWiQDZ-dx5s4bjaV-1ayFlbJi
+url = https://www.liena.com.vn/noi-that/sofa-nem-cao-cap
 
 [www.youtube.com]
 match = -57.1%%
