--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-07-28 08:04:31
+lastsearch = 2024-07-28 10:31:10
 
 [www.diepxuan.com]
 match = 37.5%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOoovot9pw2dDiqnSMC5yZlLtWBXfM_APK1bGhHrP9AArYePbUsS3
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [www.tripadvisor.com]
 match = -112.5%%
