CI images update

--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-28 05:00:29
+lastsearch = 2024-07-28 11:43:09
 
 [chieutruc.info]
 match = -73.9%%
@@ -99,7 +99,7 @@ url = https://www.sendo.vn/chieu-truc-cao-bang.htm
 [www.lazada.vn]
 match = -60.9%%
 title = Chiếu trúc tre Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
-url = https://www.lazada.vn/products/chieu-truc-tre-tay-bac-cao-bang-loai-dep-mat-lanh-mua-he-i1552981866.html?srsltid=AfmBOor1sTN1QMo0Lk4kktyjMo7BZoC_nkvJrZhd3f4l-OiKAHpEhmgN
+url = https://www.lazada.vn/products/chieu-truc-tre-tay-bac-cao-bang-loai-dep-mat-lanh-mua-he-i1552981866.html
 
 [chieutruccaobang.com]
 match = 52.6%%
