--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -14,7 +14,7 @@ url = https://www.instagram.com/nemfurniturejsc/?hl=en
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOops0Ck91FviaqRMep-rO7FPp-xv_BOcrDS7kK-NXJWYLAWXoCDi
 
 [www.facebook.com]
 match = -105.6%%
@@ -39,7 +39,7 @@ url = https://www.proz.com/profile/2092720
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOorYJbGJoONpFSruk6huGGZd0vLuEz6GLGML8ReNux52go8gDSkY
 
 [m.facebook.com]
 match = -200.0%%
