--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-28 09:53:30
+lastsearch = 2024-07-28 11:46:41
 
 [www.reddit.com]
 match = -82.6%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -121.7%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [lol.fandom.com]
 match = 0.0%%
@@ -505,4 +505,9 @@ url = https://www.tuaw.com/2013/03/07/google-releases-new-ios-app-field-trip/
 match = -121.7%%
 title = The Vogeler Case, the Holy Crown of St Stephen, and the ( ...
 url = https://www.jstor.org/stable/10.5699/slaveasteurorev2.89.1.0076
+
+[history.army.mil]
+match = 0.0%%
+title = SHARPENING THE COMBAT EDGE
+url = https://history.army.mil/html/books/090/90-20/CMH_Pub_90-20.pdf
 
