--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -108,7 +108,7 @@ url = http://hunglien.net/san-pham/chieu-lac/
 
 [primagold.com.vn]
 match = -231.2%%
-title = Giá vàng 9999 hôm nay tại 64 tỉnh 27/7/2024 | Bảng giá vàng
+title = Giá vàng 9999 hôm nay tại 64 tỉnh 28/7/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
@@ -635,4 +635,9 @@ url = https://media.chinhphu.vn/lanh-dao-cac-nuoc-cac-dang-cac-to-chuc-quoc-te-c
 match = -18.8%%
 title = Hệ thống đại lý miền Nam
 url = https://nghiabeauty.vn/pages/he-thong-dai-ly-mien-nam
+
+[tiki.vn]
+match = -168.8%%
+title = STT yêu đời, lạc quan, vui vẻ, ngắn gọn tạo động lực
+url = https://tiki.vn/blog/stt-yeu-doi/
 
