--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-28 05:17:48
+lastsearch = 2024-07-28 11:31:38
 
 [burningman.org]
 match = -60.0%%
@@ -1100,4 +1100,9 @@ url = https://www.megaplextheatres.com/
 match = -13.3%%
 title = How to reinstall macOS
 url = https://support.apple.com/en-us/102655
+
+[www.kcmo.gov]
+match = -160.0%%
+title = CITY OF KANSAS CITY | OFFICIAL WEBSITE | Home
+url = https://www.kcmo.gov/
 
