--- a/images/nem-di-a-mon-7f-14-tc/config.ini
+++ b/images/nem-di-a-mon-7f-14-tc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-28 09:51:31
+lastsearch = 2024-07-28 11:35:44
 
 [www.diepxuan.com]
-match = -81.0%%
-title = Điệp Xuân Nệm di a mon 7f 14 tc - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html
+match = -33.3%%
+title = Nệm di a mon 7f 14 tc - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html?srsltid=AfmBOooqLTspxL4BPXG7ADkRmmosWxBDJyheQ9DrA1QzLxOMJ0vmMh4r
 
 [www.coaps.fsu.edu]
 match = -61.9%%
@@ -17,9 +17,9 @@ title = Defining the Northeast Monsoon of India - COAPS
 url = https://www.coaps.fsu.edu/~vmisra/nem-mwr.pdf
 
 [www.sec.gov]
-match = -9.5%%
-title = 0000891092-08-000575.txt
-url = https://www.sec.gov/Archives/edgar/data/19617/0000891092-08-000575.txt
+match = -4.8%%
+title = 0001193125-10-272249.txt
+url = https://www.sec.gov/Archives/edgar/data/312070/0001193125-10-272249.txt
 
 [weblink.arroyogrande.org]
 match = -5.6%%
