--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-28 09:52:49
+lastsearch = 2024-07-28 11:45:17
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -52,9 +52,9 @@ title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
 url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
 
 [nemcaosuthangloi.vn]
-match = 12.0%%
-title = NỆM MEMORY FOAM THẮNG LỢI
-url = https://nemcaosuthangloi.vn/nem-memory-foam-thang-loi.html
+match = 4.0%%
+title = NỆM CAO SU HOẠT TÍNH THẮNG LỢI
+url = https://nemcaosuthangloi.vn/nem-cao-su-hoat-tinh-thang-loi.html
 
 [www.diepxuan.com]
 match = 88.0%%
@@ -68,8 +68,8 @@ url = https://everonvn.com.vn/everon/136/bo-he-everon
 
 [songhongonline.vn]
 match = 17.4%%
-title = Bộ sản phẩm SH_BC23 071
-url = https://songhongonline.vn/products/nhan-ban-tu-bo-san-pham-sh-bc22-052
+title = Bộ sản phẩm SH_BC22 059
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-059
 
 [hanvico.com.vn]
 match = 12.0%%
