--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-28 08:11:02
+lastsearch = 2024-07-28 11:59:01
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -129.4%%
-title = Does KQ Entertainment treat their idols well?
-url = https://www.quora.com/Does-KQ-Entertainment-treat-their-idols-well
+match = -211.8%%
+title = Does JYP allow his artists to write down their own songs or ...
+url = https://www.quora.com/Does-JYP-allow-his-artists-to-write-down-their-own-songs-or-does-he-write-it-for-them-like-how-YG-writes-songs-for-Blackpink
 
 [msaniimusicgroup.org]
 match = 0.0%%
@@ -254,7 +254,7 @@ url = https://gvac.haus-umbau.eu/kpop-nickname.html
 [www.science.org]
 match = -205.9%%
 title = Fast topological pumps via quantum metric engineering on ...
-url = https://www.science.org/doi/abs/10.1126/sciadv.adn5028?af=R
+url = https://www.science.org/doi/abs/10.1126/sciadv.adn5028?mi=0&af=R&target=default
 
 [www.thno.org]
 match = -205.9%%
