--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-28 09:17:18
+lastsearch = 2024-07-28 11:51:03
 
 [shopee.vn]
 match = -137.5%%
@@ -209,7 +209,7 @@ url = https://www.nichieiasia.com/mai-rua-co-tac-dung-gi-tai-sao-dan-ong-nen-an-
 [www.diepxuan.com]
 match = 6.2%%
 title = Chăn cừu mai rùa - Điệp Xuân
-url = https://www.diepxuan.com/chan-cuu-mai-rua.html?srsltid=AfmBOopPMXTwnou54xcViz2jo9xFLAugQ3ePTrOsGiCd0F9iwDA6o-oA
+url = https://www.diepxuan.com/chan-cuu-mai-rua.html
 
 [www.makemytrip.com]
 match = -37.5%%
