--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-28 06:44:33
+lastsearch = 2024-07-28 11:57:15
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,9 +17,9 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = -6.5%%
-title = đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
+match = -22.6%%
+title = Ga chống thấm Hilton Cotton cao cấp CTHT01 | Khuyến mãi
+url = https://demxanh.com/ga-chong-tham-hilton-cotton-cao-cap-ctht01.html
 
 [dreamland.vn]
 match = -21.1%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = -29.0%%
-title = Đệm lò xo cao cấp, Mua nệm lò xo bảo trì trọn đời
-url = https://demxinh.vn/dem-lo-xo/
+match = 9.7%%
+title = Chăn Ga Gối Dreamland Chính Hãng Giá Tốt
+url = https://demxinh.vn/chan-ga-goi-dreamland/
 
 [dongahome.vn]
 match = 3.2%%
@@ -42,9 +42,9 @@ title = Để chuyện phòng the lên đỉnh, bạn nên chọn loại nệm n
 url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html
 
 [uannga.vn]
-match = 48.3%%
-title = Bộ chăn ga Phủ Dreamland TR16
-url = https://uannga.vn/index.php/shops/Chan-Ga-Dreamland/bo-chan-ga-phu-dreamland-tr16.html
+match = 3.6%%
+title = Nệm Massage Premium dày 15cm
+url = https://uannga.vn/index.php/shops/dem/nem-massage-premium-day-15cm.html
 
 [www.diepxuan.com]
 match = 100.0%%
