--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-28 09:49:18
+lastsearch = 2024-07-28 11:56:33
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [shopee.vn]
-match = -105.0%%
-title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường xếp
+match = -135.0%%
+title = Bộ màn cao cấp Goldcat cho giường Ghép trẻ em, thiết kế ...
+url = https://shopee.vn/Bộ-màn-cao-cấp-Goldcat-cho-giường-Ghép-trẻ-em-thiết-kế-cao-thoáng-thẩm-mĩ-và-tiện-lợi.-i.233701152.14502840826
 
 [sofatoanquoc.com]
 match = 30.0%%
@@ -73,13 +73,13 @@ url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb15
 
 [noithatcaco.vn]
 match = -115.0%%
-title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+title = 15+ mẫu giường ngủ cho bé gái 10 tuổi siêu xinh, dễ thương
+url = https://noithatcaco.vn/cam-nang-noi-that/giuong-ngu-cho-be-gai-10-tuoi-744.html
 
 [www.quiphuc.com]
-match = 0.0%%
-title = Giường - Sản phẩm mùa hè
-url = https://www.quiphuc.com/collections/giuong-san-pham-mua-he
+match = 25.0%%
+title = Giường - Ghế du lịch
+url = https://www.quiphuc.com/collections/giuong-ghe-du-lich
 
 [sumika.vn]
 match = -65.0%%
