--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-07-28 11:42:29
 [www.diepxuan.com]
 match = 26.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoo5rD_aY-lwsgWWjYWXttEmlsgG_4pVpSS6cn-Za7OpXA1VMmHN
 
 [demkhangduy.com]
 match = -25.0%%
