--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-28 06:17:17
+lastsearch = 2024-07-28 12:20:01
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -28,8 +28,8 @@ url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
 match = -243.8%%
-title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
-url = https://www.youtube.com/watch?v=0vPz1cnaTNM
+title = Cô bé bỗng dưng ăn chay, thuộc làu kinh kệ và nói nhiều điều ...
+url = https://www.youtube.com/watch?v=89mA9A3sXUs
 
 [tuyensinh247.com]
 match = -218.8%%
