--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-28 11:14:33
+lastsearch = 2024-07-28 12:28:23
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = Đợi Chế Ra Lấy Giá Võng Tranh Thủ Ướp Cá Bủn Muối Xã
 url = https://www.youtube.com/watch?v=mscki_o4aGM
 
 [books.google.com]
-match = -175.0%%
-title = Văn hóa, nguyệt san: tập-san nghiên-cứu và phổ-thông
-url = https://books.google.com/books?id=3oclAAAAMAAJ&pg=PA220&lpg=PA220&dq=chieu+lac+soc+18&source=bl&ots=CqzKE2Gm8k&sig=ACfU3U1WDyIx3wxTP8VVYeiPDXxZYWXaag&hl=en&sa=X&ved=2ahUKEwiyxdXa78iHAxViEVkFHX5sEsYQ6AF6BAgbEAM
+match = -156.2%%
+title = Nizu #3: Bạn bè - Page 14 - Google Books Result
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkNmfiq33&sig=ACfU3U3SryDGVKSxGUeotuN4A_Bi7q-tzg&hl=en&sa=X&ved=2ahUKEwihsvaagMmHAxWHGVkFHRVEAUcQ6AF6BAgYEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
