--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-28 11:46:58
+lastsearch = 2024-07-28 12:15:33
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -107,9 +107,9 @@ title = Volleyball Announces 2024 Schedule
 url = https://purpleeagles.com/news/2024/6/25/womens-volleyball-volleyball-announces-2024-schedule.aspx
 
 [www.uscis.gov]
-match = -230.0%%
-title = Chapter 7 - Child Status Protection Act
-url = https://www.uscis.gov/policy-manual/volume-7-part-a-chapter-7
+match = -430.0%%
+title = I-589, Application for Asylum and for Withholding of Removal
+url = https://www.uscis.gov/sites/default/files/document/forms/i-589.pdf
 
 [www.ftb.ca.gov]
 match = -240.0%%
@@ -180,4 +180,19 @@ url = https://www.va.gov/pension/survivors-pension/
 match = -170.0%%
 title = Ren | Chinese Virtue of Humanity
 url = https://www.britannica.com/topic/ren
+
+[www.cancer.org]
+match = -190.0%%
+title = Key Statistics for Prostate Cancer
+url = https://www.cancer.org/cancer/types/prostate-cancer/about/key-statistics.html
+
+[www.nyc.gov]
+match = -430.0%%
+title = Parents' Guide to New York State Child Abuse and Neglect ...
+url = https://www.nyc.gov/assets/acs/pdf/stateguide_english.pdf
+
+[clas.ucdenver.edu]
+match = -60.0%%
+title = Xiaojun Ren | Chemistry
+url = https://clas.ucdenver.edu/chemistry/xiaojun-ren
 
