--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-28 11:58:18
+lastsearch = 2024-07-28 12:22:07
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -187.5%%
-title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
+match = -218.8%%
+title = 21-08-2023 Thời sự chiều 18h30 | 21-08-2023 Thời sự chiều ...
+url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
 
 [thuvienphapluat.vn]
 match = -206.2%%
