--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-28 10:13:29
+lastsearch = 2024-07-28 12:25:13
 
 [www.georgianicols.com]
 match = -192.3%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -92.3%%
-title = Anthony Edwards (basketball)
-url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
+match = -160.0%%
+title = Svara
+url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
 match = -84.6%%
@@ -37,9 +37,9 @@ title = 3:16 Healthcare | Bremen GA
 url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
-match = -269.2%%
-title = MAC Powder Kiss: Lip Workshop with Sylvia Gani | MAC ...
-url = https://www.youtube.com/watch?v=2OJn1qtw3WY
+match = -338.5%%
+title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
+url = https://www.youtube.com/watch?v=wwH3mdjbKac
 
 [www.regmovies.com]
 match = -215.4%%
