--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-28 05:44:20
+lastsearch = 2024-07-28 12:16:53
 
 [www.gov.uk]
 match = -200.0%%
@@ -32,9 +32,9 @@ title = Movie Information | Tickets | Showtimes |
 url = https://readingcinemas.com/
 
 [www.youtube.com]
-match = -86.7%%
-title = 1 Corinthians 16:13 || Act Like Men
-url = https://www.youtube.com/watch?v=gkX5_aZPBXU
+match = -60.0%%
+title = JGLM | New Man 2020 | Session 16
+url = https://www.youtube.com/watch?v=_tpd4v1emkc
 
 [vietjack.com]
 match = -106.7%%
