--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-28 10:43:34
+lastsearch = 2024-07-28 12:24:10
 
 [www.bible.com]
 match = -128.6%%
@@ -22,9 +22,9 @@ title = Mùng chụp tự bung F1 - màu trắng
 url = https://mungmocmien.com/products/nhan-ban-tu-mung-chup-tu-bung-f1-mau-xanh
 
 [munghoangphat.com]
-match = -207.1%%
-title = Mùng chụp tự bung đỉnh rộng HOÀNG PHÁT - XANH TRƠN ...
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-rong-hoang-phat-xanh-tron-loai-tot-.html
+match = -150.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [manthutrang.com]
 match = -207.1%%
