--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-28 06:42:24
+lastsearch = 2024-07-28 12:25:34
 
 [shopee.vn]
-match = -104.2%%
-title = Thảm nỉ lau chân hình chữ nhật, chùi chân len mềm mịn dày dặn ...
-url = https://shopee.vn/Thảm-nỉ-lau-chân-hình-chữ-nhật-chùi-chân-len-mềm-mịn-dày-dặn-chống-trơn-trượt-hàng-chất-lượng-cao-i.1124996528.22086948160
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
+title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
 
 [tiki.vn]
 match = -54.2%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -33.3%%
-title = Thảm Bàn chân len mịn thấm hút tốt size 40*60cm. ĐTVM
-url = https://www.lazada.vn/products/tham-ban-chan-len-min-tham-hut-tot-size-4060cm-dtvm-i2005592715.html?srsltid=AfmBOooryIp1cEDKyXFTAttcc12qZGNmQX5Qv2HtyMD_yilFumxwuaVe
+match = -70.8%%
+title = Thảm chùi chân,LEN MỊN thảm lau chân chống trơn trượt ...
+url = https://www.lazada.vn/products/tham-chui-chanlen-min-tham-lau-chan-chong-tron-truot-hang-cao-cap-mau-moi-40-60cm-i1342643160.html
 
 [megahomevietnam.com]
 match = 20.0%%
