CI images update

--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-28 10:34:38
+lastsearch = 2024-07-28 12:44:27
 
 [thegioidemviet.vn]
 match = 21.4%%
@@ -37,9 +37,9 @@ title = Mua Chiếu trúc Quế Lâm - hàng chuẩn loại 1
 url = https://tiki.vn/chieu-truc-que-lam-hang-chuan-loai-1-p87382996.html
 
 [www.sendo.vn]
-match = -3.6%%
-title = Chiếu Trúc Hạt Loại Một Giá Cực Rẻ Nên Mua Ở Đâu
-url = https://www.sendo.vn/chieu-truc-hat.htm
+match = -32.1%%
+title = Chiếu Trúc 1 6X2M Hàng Hiệu, Giá Tận Gốc, Thanh Toán ...
+url = https://www.sendo.vn/chieu-truc-1-6x2m.htm
 
 [www.lazada.vn]
 match = 3.6%%
