--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-28 10:45:18
+lastsearch = 2024-07-28 12:53:43
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV45
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv45/
+title = Bộ ga chun LIVING - LV55
+url = https://hanvico.com.vn/san-pham/lv55/
 
 [www.diepxuan.com]
 match = -4.8%%
@@ -17,9 +17,9 @@ title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
 url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
-match = -95.2%%
-title = BỘ CHĂN GA LASANTE PHÁP - LAN TÂY - La Sante Việt Nam
-url = https://lasantevn.com/bo-chan-ga-hoa-lan-tay-lasante-phap/
+match = -57.1%%
+title = BỘ CHĂN GA KẺ CARO MODAL 14 - La Sante Việt Nam
+url = https://lasantevn.com/bo-chan-ga-ke-caro-modal-14/
 
 [chandem.com.vn]
 match = 33.3%%
@@ -33,8 +33,8 @@ url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
 match = -28.6%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
-url = https://changagoidemsonghong.com/chan-ga-goi-bc61
+title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
+url = https://changagoidemsonghong.com/chan-ga-goi-bc63
 
 [songhong.info]
 match = -19.0%%
@@ -53,8 +53,8 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 
 [foreverbedding.net]
 match = -66.7%%
-title = Bộ ga chun chần mặt Velina V20 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v20
+title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
 
 [changmibedding.com]
 match = -33.3%%
