--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-28 10:40:03
+lastsearch = 2024-07-28 12:51:16
 
 [chieutruc.info]
 match = -100.0%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 [nhathuoclongchau.com.vn]
 match = -104.5%%
 title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
-url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
+url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html?srsltid=AfmBOoroNUA7yTtIUdmGW_Oagkh6zmsNq5pXoyBhzJ0GZ-UT9FYj5F4J
 
 [www.vinmec.com]
 match = -100.0%%
@@ -37,9 +37,9 @@ title = [HD] Chiếu cói Kim Sơn - Ninh Bình
 url = https://www.youtube.com/watch?v=3QOyWtlqmqg
 
 [www.facebook.com]
-match = 45.5%%
-title = Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
+match = 40.9%%
+title = Chiếu Cói Cao Cấp Nga Sơn
+url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
 match = -109.1%%
@@ -49,7 +49,7 @@ url = https://medlatec.vn/tin-tuc/su-phat-trien-cua-thai-18-tuan-va-nhung-thay-d
 [www.lazada.vn]
 match = -68.2%%
 title = 🌿Chiếu Việt Thái Cao Cấp Chính Hãng🌿 Chiếu Nhựa Việt ...
-url = https://www.lazada.vn/products/chieu-viet-thai-cao-cap-chinh-hang-chieu-nhua-viet-thai-loai-1-thuong-hieu-uy-tin-size-lon-xep-nho-gon-tien-loi_hcm-i2408709081.html
+url = https://www.lazada.vn/products/chieu-viet-thai-cao-cap-chinh-hang-chieu-nhua-viet-thai-loai-1-thuong-hieu-uy-tin-size-lon-xep-nho-gon-tien-loi_hcm-i2408709081.html?srsltid=AfmBOoqWBX9j897ROQdHTYHzEeu7Av9SFpkYNgyj40UqX5t_cya2rJzO
 
 [shopee.vn]
 match = -13.6%%
