--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-28 12:28:23
+lastsearch = 2024-07-28 12:57:33
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=mscki_o4aGM
 [books.google.com]
 match = -156.2%%
 title = Nizu #3: Bạn bè - Page 14 - Google Books Result
-url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkNmfiq33&sig=ACfU3U3SryDGVKSxGUeotuN4A_Bi7q-tzg&hl=en&sa=X&ved=2ahUKEwihsvaagMmHAxWHGVkFHRVEAUcQ6AF6BAgYEAM
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkNmfkn83&sig=ACfU3U2l_QacZMyFnhQFq0msSsqnfBePhA&hl=en&sa=X&ved=2ahUKEwilzrHdhsmHAxWDEFkFHUKrIWsQ6AF6BAgeEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -372,9 +372,9 @@ title = Size Guide
 url = https://pandora.norbreeze.vn/pages/size-guide-1
 
 [m.facebook.com]
-match = -100.0%%
-title = TUYỂN DỤNG SINH VIÊN VÀ TTS (CÓ CẤP MỘC )
-url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8367138683310105/
+match = -175.0%%
+title = HR - TUYỂN DỤNG | HR THÁNG 7,8 - ĐI LÀM NGAY SAU ...
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8371611452862828/
 
 [shopee.vn]
 match = -75.0%%
@@ -452,9 +452,9 @@ title = Hướng dẫn quần chúng nhân dân và các đoàn đến viếng .
 url = https://xaydungchinhsach.chinhphu.vn/tphcm-huong-dan-quan-chung-nhan-dan-va-cac-doan-den-vieng-tong-bi-thu-nguyen-phu-trong-119240724110435557.htm
 
 [znews.vn]
-match = -156.2%%
-title = Olympic Uzbekistan suýt tạo cú sốc trước Tây Ban Nha
-url = https://znews.vn/olympic-uzbekistan-suyt-tao-cu-soc-truoc-tay-ban-nha-post1488139.html
+match = -87.5%%
+title = Số áo đặc biệt của sao trẻ Real Madrid
+url = https://znews.vn/so-ao-dac-biet-cua-sao-tre-real-madrid-post1488646.html
 
 [chas.org]
 match = -125.0%%
@@ -568,8 +568,8 @@ url = https://aliasdebarras.fr/2529798-bạn-quốc-hàn-18-gái-mông-to.html
 
 [baochinhphu.vn]
 match = -206.2%%
-title = Điện mừng Cuba kỷ niệm 71 năm Ngày tấn công Trại lính ...
-url = https://baochinhphu.vn/dien-mung-cuba-ky-niem-71-nam-ngay-tan-cong-trai-linh-moncada-102240726183720217.htm
+title = Võ sĩ Hà Thị Linh giành vé vào vòng 1/8 Olympic Paris 2024
+url = https://baochinhphu.vn/vo-si-ha-thi-linh-gianh-ve-vao-vong-1-8-olympic-paris-2024-102240727230855752.htm
 
 [monchantierbois.fr]
 match = -181.2%%
@@ -627,9 +627,9 @@ title = Địa điểm - DỊCH VỤ Y TẾ CHÂU Á
 url = https://asianhealthservices.org/vi/locations/
 
 [media.chinhphu.vn]
-match = -231.2%%
-title = Lãnh đạo các nước, các đảng, các tổ chức quốc tế chia buồn ...
-url = https://media.chinhphu.vn/lanh-dao-cac-nuoc-cac-dang-cac-to-chuc-quoc-te-chia-buon-tong-bi-thu-nguyen-phu-trong-tu-tran-102240726214318202.htm
+match = -225.0%%
+title = Thủ tướng tưởng niệm các anh hùng liệt sĩ và tặng quà gia ...
+url = https://media.chinhphu.vn/thu-tuong-tuong-niem-cac-anh-hung-liet-si-va-tang-qua-gia-dinh-chinh-sach-tai-thai-nguyen-102240728084907468.htm
 
 [nghiabeauty.vn]
 match = -18.8%%
@@ -640,4 +640,9 @@ url = https://nghiabeauty.vn/pages/he-thong-dai-ly-mien-nam
 match = -168.8%%
 title = STT yêu đời, lạc quan, vui vẻ, ngắn gọn tạo động lực
 url = https://tiki.vn/blog/stt-yeu-doi/
+
+[moitruong.net.vn]
+match = -112.5%%
+title = Kon Tum xảy ra 2 trận động đất liên tiếp
+url = https://moitruong.net.vn/kon-tum-xay-ra-2-tran-dong-dat-lien-tiep-75943.html
 
