CI images update

--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-28 01:24:14
+lastsearch = 2024-07-28 13:32:03
 
 [www.youtube.com]
 match = -420.0%%
@@ -315,4 +315,9 @@ url = https://stramcenter.com/blog/blog-detail/ren-12-for-a-healthy-summer-stoma
 match = 0.0%%
 title = 
 url = https://www.drjin.co.uk/post/asthma-and-bronchitis-acupuncture-treatment
+
+[14dayswithyou.tumblr.com]
+match = -410.0%%
+title = (1) Yandere Near You! — Sadly, I'm suffering from Ren ...
+url = https://14dayswithyou.tumblr.com/post/686469284888723456/sadly-im-suffering-from-ren-brainrot-i-was
 
