--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-28 08:05:33
+lastsearch = 2024-07-28 13:21:39
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = TIN CHIỀU 25/7: HUYỀN THOẠI M.U MUỐN GIỮ RASHFORD ...
 url = https://www.youtube.com/watch?v=LXqHpPenE6A
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHaczOamva&sig=ACfU3U3gsHkKgSbyhf3Scsze5eJk2wi_5w&hl=en&sa=X&ved=2ahUKEwiz-rG7xciHAxUtODQIHS1TKQwQ6AF6BAgcEAM
+match = -150.0%%
+title = American Soap Journal and Manufacturing Chemist
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9FdBczC7&sig=ACfU3U3_XgCWm0szpclcQiJbWoArajO-Mg&hl=en&sa=X&ved=2ahUKEwjVwY6PjMmHAxUyKFkFHc6iGe8Q6AF6BAgcEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
