--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-28 12:33:05
+lastsearch = 2024-07-28 13:26:03
 
 [screenrant.com]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://www.reddit.com/r/VietNam/comments/18zushv/why_are_xanh_sm_drivers_
 [demxanh.com]
 match = 28.6%%
 title = Màn chụp giá rẻ
-url = https://demxanh.com/man-chup-gia-re.html?srsltid=AfmBOopel98y4coFX9oCDg1S_VcUlMuPOD_69WLsjBNk4NOZiz93y4Yn
+url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
 match = -114.3%%
