--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-28 10:30:48
+lastsearch = 2024-07-28 13:45:07
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -587,9 +587,9 @@ title = 16 hy vọng của Thể thao Việt Nam tại Olympic Paris 2024
 url = https://congly.vn/16-hy-vong-cua-the-thao-viet-nam-tai-olympic-paris-2024-441266.html
 
 [baobinhphuoc.com.vn]
-match = -187.5%%
-title = Khám phá showroom nội thất Phúc Hưng - An Cường tại ...
-url = https://baobinhphuoc.com.vn/news/9/160419/kham-pha-showroom-noi-that-phuc-hung-an-cuong-tai-gia-nghia
+match = -137.5%%
+title = Câu lạc bộ Hà Nội vô địch Giải U17 quốc gia 2024
+url = https://baobinhphuoc.com.vn/news/18/160659/cau-lac-bo-ha-noi-vo-dich-giai-u17-quoc-gia-2024
 
 [tiengchuong.chinhphu.vn]
 match = -231.2%%
