--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-28 01:42:29
+lastsearch = 2024-07-28 13:48:00
 
 [demxanh.com]
 match = -41.2%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOorksUOFnozOSSgAraeNKWxoaGwwD4l-MW-v_2EJr7CCe0AHorwu
 
 [tiki.vn]
-match = -117.6%%
-title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
+match = -141.2%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
 url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
 
 [www.lazada.vn]
-match = -152.9%%
-title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
+match = -94.1%%
+title = Thảm Bali Trải Sàn Phòng Ngủ Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/tham-bali-trai-san-phong-ngu/?srsltid=AfmBOopE0pd7BgqOmJJBbLlBrOhWe9IXdHPitpqF1Ly2woKqyqmm7Y_d
 
 [thegioidemviet.vn]
 match = -152.9%%
