CI images update

--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-28 11:58:40
+lastsearch = 2024-07-28 14:16:11
 
 [demxanh.com]
 match = -18.5%%
 title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html?srsltid=AfmBOop0fdSOj_Ej-_lVS_bKiu9eUThOf7YW1L_n_dJYllKlzzC4OmK6
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [demre.com.vn]
 match = 66.7%%
 title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-1
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -44,12 +44,12 @@ url = https://thegioidemviet.vn/chieu-truc/
 [www.diepxuan.com]
 match = 63.0%%
 title = Điệp Xuân Chiếu trúc Thái đen 160x200
-url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html?srsltid=AfmBOoqaIw-R_EmAhu9BZlYjWw2Lmb6pqYJLURJzIntqfGFc9o7uvmlw
+url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 
 [shopee.vn]
-match = -48.1%%
-title = Chiếu Tre Việt Phổ Mến Thái Bình 100%% made in Việt Nam ...
-url = https://shopee.vn/Chiếu-Tre-Việt-Phổ-Mến-Thái-Bình-100-made-in-Việt-Nam-đan-thủ-công-chắc-chắn-i.334752746.9933777878
+match = -18.5%%
+title = Chiếu tre gấp vân gỗ Thái Lan 200x220| 180x200| 160x200
+url = https://shopee.vn/Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
 
 [tiki.vn]
 match = -7.4%%
