--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-28 12:46:10
+lastsearch = 2024-07-28 14:24:22
 
 [www.youtube.com]
 match = -147.4%%
@@ -292,9 +292,9 @@ title = Fuhu - Mạng xã hội dành cho nhà sáng tạo
 url = https://fuhuq.net/en
 
 [suckhoedoisong.vn]
-match = -147.4%%
-title = Thứ trưởng Bộ Y tế Đỗ Xuân Tuyên làm việc với tổ chức ...
-url = https://suckhoedoisong.vn/thu-truong-bo-y-te-do-xuan-tuyen-lam-viec-voi-to-chuc-cua-lhq-ve-phong-chong-ma-tuy-169240728084654426.htm
+match = -152.6%%
+title = Đã ghi nhận hơn 41.900 ca sốt xuất huyết, số mắc có thể ...
+url = https://suckhoedoisong.vn/da-ghi-nhan-hon-41900-ca-sot-xuat-huyet-so-mac-co-the-tiep-tuc-tang-16924072800321477.htm
 
 [thegioihoa.net]
 match = -89.5%%
