--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-28 11:52:47
+lastsearch = 2024-07-28 14:27:26
 
 [eva.vn]
 match = -131.6%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Xuất Nhật Mộc Hương Cao Cấp, Chiếu Điều ...
 url = https://shopee.vn/Chiếu-Trúc-Xuất-Nhật-Mộc-Hương-Cao-Cấp-Chiếu-Điều-Hòa-Mùa-Hè-i.252624902.17494018040
 
 [mocnhienfarm.com]
-match = 10.5%%
-title = Hoa chiều tím trắng cao E1
-url = https://mocnhienfarm.com/products/hoa-chieu-trang
+match = -7.7%%
+title = Cây pháo bông
+url = https://mocnhienfarm.com/products/cay-phao-bong
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
