--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-28 06:18:38
+lastsearch = 2024-07-28 14:22:39
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,19 +12,19 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = -6.5%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 180x200cm (1m8)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-mau-den-loai-khong-vien-180x200cm-26.html
+match = 32.3%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
 
 [shopee.vn]
-match = -3.2%%
-title = chiếu trúc điều hòa giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc điều hòa
+match = 16.1%%
+title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc
 
 [tiki.vn]
-match = -6.5%%
-title = Chiếu trúc hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=chiếu trúc
+match = -19.4%%
+title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [demxanh.com]
 match = -9.7%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 61.3%%
-title = Chiếu trúc Quế Lâm loại 1m*1m9 - ctql001
-url = https://www.sendo.vn/chieu-truc-que-lam-loai-1m-1m9-31977538.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1711756800322_undefined_-1_cateLvl2_0_8_23_-1
+match = -3.2%%
+title = Chiếu Trúc Hạt Quế Lâm kích thước 2m2x2m [Được kiểm ...
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-2m2x2m-duo-c-kie-m-ha-ng-18050806-117250489.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722038400324_undefined_-1_cateLvl2_0_69_23_-1
 
 [www.lazada.vn]
 match = 16.1%%
