--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-28 11:32:18
+lastsearch = 2024-07-28 14:24:45
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -12,9 +12,9 @@ title = Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.instagram.com]
-match = 0.0%%
-title = 
-url = https://www.instagram.com/lol_nemesis/
+match = -35.0%%
+title = Fabiana Justus (@fabianajustus)
+url = https://www.instagram.com/fabianajustus/?hl=en
 
 [www.reddit.com]
 match = -115.0%%
@@ -62,9 +62,9 @@ title = Oriental Kitchen Fermented Pork Bites 300g Vietnamese ...
 url = https://www.zing-asia.co.uk/Freshly-Frozen-Oriental-Food-from-Zing-Asia-Chester-UK/15397-oriental-kitchen-fermented-pork-bites-300g-vietnamese-nem-chua-tu-phap-fermented-pork-bites-3447574603102.html
 
 [br.ign.com]
-match = -21.4%%
-title = Mais destaques
-url = http://br.ign.com/?desktop
+match = -120.0%%
+title = Riot Games manipula partidas para fazer você perder? ...
+url = https://br.ign.com/league-of-legends/127310/news/riot-games-manipula-partidas-para-fazer-voce-perder-cientista-analisa-178-mil-jogos-de-lol-e-tem-a-r
 
 [koncertbooking.com]
 match = -150.0%%
@@ -162,9 +162,9 @@ title = Fele annyiba se kerül a "Faker Ahri" szobor, mint a LoL-os ...
 url = https://leetgaming.com/2024/06/12/lol-league-of-legends-faker-skincsomag-ar-figura-cikk/
 
 [www.thespike.gg]
-match = -80.0%%
-title = Dplus vs Nongshim RedForce | VCL - Korea Split 2
-url = https://www.thespike.gg/br/match/dplus-nongshim-redforce/120063
+match = -90.0%%
+title = Nuclear GC vs URACHACHA GC | VALORANT Game ...
+url = https://www.thespike.gg/br/match/nuclear-gc-urachacha-gc/120558
 
 [sensiblepsych.my-free.website]
 match = -155.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = S. Korean vice foreign minister holds bilateral meetings at ...
-url = https://en.yna.co.kr/view/AEN20171121002500315
+match = -115.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.vlr.gg]
 match = -145.0%%
