CI images update

--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-28 06:46:55
+lastsearch = 2024-07-28 14:38:09
 
 [www.zillow.com]
 match = -69.2%%
@@ -107,9 +107,9 @@ title = Regal Hollywood @ North I-85 Movie Tickets and ...
 url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [www.facebook.com]
-match = -192.3%%
-title = Spalding County Sheriff's Office | Griffin GA
-url = https://www.facebook.com/spaldingsheriff/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.bpas.org]
 match = -184.6%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOorST_-doRZEowgmKB63X6XF5W2XlO2II2ILAWaJqG-Eh9jygMH1
+url = https://www.lazada.vn/tag/ga-ni-long/
 
 [www.njcaa.org]
 match = -140.0%%
