--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-28 09:25:53
+lastsearch = 2024-07-28 14:27:50
 
 [everon.online]
 match = 50.0%%
@@ -18,8 +18,8 @@ url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [tiki.vn]
 match = 29.4%%
-title = Mua Bộ ga chun chần bốn mùa Everon ESB22051 ( 01 ...
-url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-esb22051-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829191.html
+title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
+url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
 match = -20.6%%
