--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-28 13:31:42
+lastsearch = 2024-07-28 14:41:16
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -147.4%%
-title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
-url = https://www.youtube.com/watch?v=NPdIFgtFTso
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [kallos.co]
 match = -105.3%%
@@ -260,4 +260,9 @@ url = https://www.scribd.com/document/673940394/giam-doc-ha-noi
 match = -121.1%%
 title = Chương 344 - Trọng Sinh 2000, Thanh Mai Giáo Hoa 18 ...
 url = https://truyenyy.pro/truyen/trong-sinh-2000-thanh-mai-giao-hoa-18-tuoi/chuong-344.html
+
+[baogialai.com.vn]
+match = 0.0%%
+title = Chủ động với cơ chế đặc thù
+url = https://baogialai.com.vn/chu-dong-voi-co-che-dac-thu-post285949.html
 
