--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-28 13:25:21
+lastsearch = 2024-07-28 14:40:15
 
 [helloviettravel.com]
 match = -181.2%%
@@ -87,14 +87,14 @@ title = Du lịch Mỹ khởi động lại sau 18 tháng đóng cửa
 url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-thang-dong-cua
 
 [www.klook.com]
-match = -168.8%%
-title = 42 Địa Điểm Du Lịch Gần Sài Gòn Cho Cuối Tuần Năng ...
-url = https://www.klook.com/vi/blog/diem-du-lich-gan-sai-gon/
+match = -137.5%%
+title = 30 Khu Du Lịch Việt Nam Nổi Tiếng Bạn Đừng Bỏ Lỡ
+url = https://www.klook.com/vi/blog/khu-du-lich-o-viet-nam/
 
 [dulichviet.com.vn]
-match = -206.2%%
-title = Tour du lịch Miền Tây - Top 18 địa điểm hấp dẫn du khách ...
-url = https://dulichviet.com.vn/tin-tuc/tour-du-lich-mien-tay-top-18-dia-diem-hap-dan-du-khach-nhat
+match = -181.2%%
+title = Check in 18 địa điểm du lịch Bắc Giang sở hữu cảnh đẹp ...
+url = https://dulichviet.com.vn/tin-tuc/check-in-18-dia-diem-du-lich-bac-giang-so-huu-canh-dep-an-tuong-nhat
 
 [www.bestprice.vn]
 match = -212.5%%
