--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-28 12:23:11
+lastsearch = 2024-07-28 14:31:18
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -22,9 +22,9 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = -21.1%%
-title = Christina Mangurian, MD, MAS
-url = https://profiles.ucsf.edu/christina.mangurian
+match = 5.3%%
+title = Arun Wiita, MD, PhD
+url = https://profiles.ucsf.edu/arun.wiita
 
 [www.ncbi.nlm.nih.gov]
 match = -168.4%%
@@ -42,8 +42,8 @@ title = Tommi Gaines
 url = https://profiles.ucsd.edu/tommi.gaines
 
 [medboard.nv.gov]
-match = -100.0%%
-title = Disciplinary Actions - Medical Examiners Board
+match = -121.1%%
+title = Disciplinary Actions - Board of Medical Examiners
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.techcosmos.com.hk]
@@ -54,7 +54,7 @@ url = https://www.techcosmos.com.hk/thomas/publications/
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
 
 [www.ajnr.org]
 match = 21.1%%
@@ -332,9 +332,9 @@ title = Katie Pollard, PhD
 url = https://gladstone.org/people/katie-pollard
 
 [www.nature.com]
-match = -152.6%%
-title = Rapid groundwater decline and some cases of recovery in ...
-url = https://www.nature.com/articles/s41586-023-06879-8
+match = -105.3%%
+title = Post-acute COVID-19 syndrome | Nature Medicine
+url = https://www.nature.com/articles/s41591-021-01283-z
 
 [profiles.ucla.edu]
 match = 0.0%%
