--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-28 14:24:01
+lastsearch = 2024-07-28 14:51:00
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -77,9 +77,9 @@ title = 15+ mẫu giường ngủ cho bé gái 10 tuổi siêu xinh, dễ thươ
 url = https://noithatcaco.vn/cam-nang-noi-that/giuong-ngu-cho-be-gai-10-tuoi-744.html
 
 [www.quiphuc.com]
-match = 25.0%%
-title = Giường - Ghế du lịch
-url = https://www.quiphuc.com/collections/giuong-ghe-du-lich
+match = 0.0%%
+title = Giường - Sản phẩm mùa hè
+url = https://www.quiphuc.com/collections/giuong-san-pham-mua-he
 
 [sumika.vn]
 match = -65.0%%
@@ -255,4 +255,14 @@ url = https://caselaw.vn/tra-cuu-ma-hs
 match = -15.0%%
 title = Giường ngủ bọc da bò thật TS632
 url = https://www.topsofa.vn/giuong-ngu-ts632
+
+[noithatkenli.vn]
+match = -10.0%%
+title = GIƯỜNG BỌC DA MAISON MAS401.01
+url = https://noithatkenli.vn/san-pham/giuong-boc-da-maison-mas401-01/
+
+[muanhanhvatlieuxaydung.ritavo.com]
+match = -7.1%%
+title = BỘ DRAP GIƯỜNG
+url = https://muanhanhvatlieuxaydung.ritavo.com/products/bo-drap-giuong-13
 
