--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-28 04:20:31
+lastsearch = 2024-07-28 14:50:16
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/hoangtuetam
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVRGqE_A&sig=ACfU3U1DxzFHk55UJU199KfCwOOK4T9sxA&hl=en&sa=X&ved=2ahUKEwiE16OVk8iHAxVFEGIAHdgXCAcQ6AF6BAgXEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVRKoCYE&sig=ACfU3U0l4RQq6JV3-V5D1CtdicqaYpKqfQ&hl=en&sa=X&ved=2ahUKEwjl1J_2n8mHAxX-FlkFHf79CGYQ6AF6BAgYEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
