--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-28 13:30:16
+lastsearch = 2024-07-28 14:47:51
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxVBb-z-&sig=ACfU3U0QhB2jBejMpy3YvkmwSjLF0g63Qw&hl=en&sa=X&ved=2ahUKEwix_cGFjsmHAxV2F1kFHQb5B0EQ6AF6BAgZEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxVC55FX&sig=ACfU3U0lGMeHw2Vob_iyZd5LrwzOhW9ZYw&hl=en&sa=X&ved=2ahUKEwjK5bSxn8mHAxWNFlkFHXA-L7IQ6AF6BAgXEAM
 
 [ottawabraves.com]
 match = -292.3%%
