--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-07-28 11:55:12
+lastsearch = 2024-07-28 14:44:46
 
 [nemgiakho.com]
 match = 8.6%%
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-lien-a-1m8-chinh-hang-gia-re.html
 [www.liena.com.vn]
 match = 8.6%%
 title = Nệm Cao Su Thiên Nhiên 100%% Liên Á Cao Cấp Giá Tốt
-url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien
+url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien?srsltid=AfmBOooITPxnTt87RvkUv_3L0ziqdXziez9wrnqBSjPVeALeQzaX_Ed1
 
 [fefurniture.com.vn]
 match = 20.0%%
@@ -34,7 +34,7 @@ url = https://www.thegioinem.vn/vn/product/brand/nem-lien-a-15.html
 [demxanh.com]
 match = 11.4%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOoqbQXARhKs8m2o85La0DbkN9OL9X1VS-oaMxTyxXY00sFesPMNq
 
 [demcaosuliena.com]
 match = 48.0%%
@@ -79,7 +79,7 @@ url = https://thegioinem.com/bang-gia-nem-cao-su-lien-a.html
 [www.diepxuan.com]
 match = 65.7%%
 title = Nệm caosu Liên Á Classic 180x200x10 - Điệp Xuân
-url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
+url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html?srsltid=AfmBOor-R4EISMXe0IIBp7YyqtT0sjMuhZvklwbgLl0mydMzZbAeiZ2p
 
 [nem.vn]
 match = 28.6%%
