--- a/images/nem-foam-dreamland-uc-200x220x20/config.ini
+++ b/images/nem-foam-dreamland-uc-200x220x20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-200x220x20.html
 lastopen = 2024-06-07 00:49:31
 
 [search]
-lastsearch = 2024-07-28 14:35:20
+lastsearch = 2024-07-28 14:58:52
 
 [www.diepxuan.com]
 match = 31.2%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOooNckFmdNJ11ScKc7qNdgLkFK8imvkZDpHegUve78sYTQIY98OA
 
 [dreamfoambedding.com]
 match = -13.0%%
