CI images update

--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-28 12:30:19
+lastsearch = 2024-07-28 15:34:17
 
 [demxanh.com]
-match = 11.8%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopFf58awcssXHlOIiRKiF5Fr4DDsQGuM3Pc4-5SXtuzHU17bHr5
+match = 14.7%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
 match = 23.5%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hòa cao su non 5d
 [foreverbedding.net]
 match = 32.4%%
 title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong?srsltid=AfmBOoqF8FOJnk7VXk3l6XuS9InHn9zwLUtVWXreCX2APCE6h34W7J-R
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong
 
 [demchinhhang.com]
 match = 53.1%%
@@ -69,7 +69,7 @@ url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-dieu-hoa-
 [vtvhyundai.vn]
 match = 14.7%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOorf3dVbl91pFvY47rlU65HxS5ewA1P3563lJpDNOTaRFdqEL81N
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [dropbuy.vn]
 match = 38.2%%
@@ -97,9 +97,9 @@ title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa 
 url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [www.lazada.vn]
-match = 2.9%%
-title = Size 1.8x2m - Chiếu điều hòa tencel từ cao su non êm mát
-url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-tu-cao-su-non-em-mat-khong-kem-vo-goi-chat-chon-mau-dang-khoa-79-chieu-dieu-hoa-cao-su-non-chieu-cao-su-chieu-tencel-chieu-mat-mua-he-i786966766.html?srsltid=AfmBOoqmw2SHEiBpQ_G3kmttYeQvJ9h4jqEeA0AM6qtbhcMr_QtO8K1g
+match = -5.9%%
+title = Chiếu điều hòa cao su non 3D, Chiếu điều hoà tặng kèm 2 ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html
 
 [ru9.vn]
 match = 8.8%%
@@ -118,8 +118,8 @@ url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
 
 [olbedding.com]
 match = 11.8%%
-title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
-url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 1 - Nệm Uy Tín
+url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-1/
 
 [nemuytin.com]
 match = 11.8%%
