--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -79,7 +79,7 @@ url = https://thegioinem.com/bang-gia-nem-cao-su-lien-a.html
 [www.diepxuan.com]
 match = 65.7%%
 title = Nệm caosu Liên Á Classic 180x200x10 - Điệp Xuân
-url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html?srsltid=AfmBOor-R4EISMXe0IIBp7YyqtT0sjMuhZvklwbgLl0mydMzZbAeiZ2p
+url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 
 [nem.vn]
 match = 28.6%%
