--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-28 12:51:58
+lastsearch = 2024-07-28 15:37:21
 
 [www.diepxuan.com]
 match = 35.7%%
 title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html?srsltid=AfmBOooy9gOSyArYd2LtvPy4qgWzE2faZwMtGxIGXPXUcBz40n2zd4lk
 
 [www.lazada.vn]
 match = -53.6%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = 0.0%%
-title = Nhungspa - CN Hạ Long
-url = https://www.facebook.com/nhungspacnhalong/
+match = -53.8%%
+title = Erica Năm Căn
+url = https://www.facebook.com/profile.php?id=61550060091014&locale=fa_IR
 
 [nhua66a.com]
 match = -17.9%%
@@ -177,9 +177,9 @@ title = TP. Đào Viên · XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN - Coda
 url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
 
 [abina.vn]
-match = -57.1%%
-title = Bột làm 1kg sữa chua Hy Lạp vị mật ong manuka Easiyo - Abina
-url = https://abina.vn/sua-chua-hy-lap-mat-ong-manuka-easiyo-manuka-honey/
+match = -75.0%%
+title = Viên uống Xtend-Life NR6: tăng sinh NAD tự nhiên, chống lão ...
+url = https://abina.vn/xtend-life-nr6-tang-sinh-nad-tu-nhien-tang-cuong-tuoi-tho/
 
 [kinhtexaydung.gov.vn]
 match = -21.4%%
