--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-28 05:51:45
+lastsearch = 2024-07-28 15:39:48
 
 [shopee.vn]
 match = 8.8%%
@@ -42,9 +42,9 @@ title = Chiếu điều Hòa Cao Su Non Là Gì ...
 url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
 
 [suongtuyet.com]
-match = 17.6%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = 51.6%%
+title = Chiếu Điều Hòa Cao Su Non - 002
+url = https://suongtuyet.com/chieu-dieu-hoa-cao-su-non-002
 
 [www.olbedding.com]
 match = 11.8%%
