--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-28 13:34:11
+lastsearch = 2024-07-28 15:42:30
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=LXqHpPenE6A
 [books.google.com]
 match = -150.0%%
 title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9FdBczC7&sig=ACfU3U3_XgCWm0szpclcQiJbWoArajO-Mg&hl=en&sa=X&ved=2ahUKEwjVwY6PjMmHAxUyKFkFHc6iGe8Q6AF6BAgcEAM
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9FdCbuy-&sig=ACfU3U2cV0jqrvGeGqVojn1Q6ddAomqLCg&hl=en&sa=X&ved=2ahUKEwioif3Mq8mHAxV1q4kEHfqxMxIQ6AF6BAgfEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
