--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -22,9 +22,9 @@ title = [Freeship + Quà tặng] - Đệm lò xo Techwood Tuấn Anh rẻ ...
 url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-rẻ-nhất-thị-trường-i.74770078.6992817339
 
 [demxanh.com]
-match = -33.3%%
-title = Đệm lò xo Tuấn Anh Techwood không bóc dày 23cm
-url = https://demxanh.com/dem-lo-xo-techwood-sale-off-50.html
+match = -52.4%%
+title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [maybedding.vn]
 match = 33.3%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -133.3%%
-title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
-url = https://lombom.com/dem-nem/page/2/
+match = -119.0%%
+title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
+url = https://lombom.com/dem-lo-xo/
 
 [www.linkedin.com]
 match = 4.8%%
