--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-28 08:12:26
+lastsearch = 2024-07-28 15:44:37
 
 [shopee.vn]
-match = -30.8%%
-title = ga tham em be
-url = https://shopee.vn/search?keyword=ga-chong-tham-ga-trai-giuong-tham-chong-tham-cho-em-be-16x2m-tang-khau-trang-mau-ngau-nhien/6709027127215517721/2642071820174507179/ 
+match = -76.2%%
+title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [www.lazada.vn]
 match = -100.0%%
