--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-28 09:52:30
+lastsearch = 2024-07-28 15:38:05
 
 [www.tui.co.uk]
-match = -133.3%%
-title = Last Minute Cruise Deals | Marella Cruises
-url = https://www.tui.co.uk/cruise/deals/last-minute-cruises
+match = -40.0%%
+title = Flight and Travel Options
+url = https://www.tui.co.uk/destinations/info/travel-options
 
 [www.travelgossip.co.uk]
 match = 0.0%%
