--- a/images/vo-goi-dreamland-50x70-tencel-luxury-sh/config.ini
+++ b/images/vo-goi-dreamland-50x70-tencel-luxury-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tencel-luxury-sh.html
 lastopen = 2024-06-07 01:44:50
 
 [search]
-lastsearch = 2024-07-28 11:18:04
+lastsearch = 2024-07-28 15:35:59
 
 [www.furlife.vn]
 match = 16.7%%
@@ -60,4 +60,9 @@ url = https://scotchaddict.com/category/barware/page/4
 match = -20.5%%
 title = You need these parts for good LEGO models! - Brickizimo ...
 url = https://www.youtube.com/watch?v=RqJK36peuRM
+
+[shopee.vn]
+match = 17.9%%
+title = vỏ gối tơ tằm giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối tơ tằm&urlold=lua-vo-goi-soi-to-tam-to-lua-tre-em-duy-nhat-cua-vo-goi-40x60-mau-moi/4485986757555174298/3502170206813664485/ 
 
